# tic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: eval_benchmark.yaml  train_tic800b.yaml
examples/: basic_usage.py
scripts/: benchmark.py  download_model.py  interactive_demo.py
src/tic/: __init__.py  evaluation.py  game.py  model.py  tokenizer.py  trainer.py
tests/: __init__.py  test_tic.py
